# pepperoni

./: LICENSE  README.md  dataset.md  docker-compose.yaml  flake.nix  prompt
server/: .env  .gitignore  Dockerfile  analysis.py  analysis_results.json  app.old.py  app.py  config.py  delay_cat.py  main.py  more_analysis.py  network_analysis.json  pyproject.toml  redis_cache.py  sample.env  tests.py
server/api/: endpoints.py  schemas.py
server/core/: analysis.py  insights.py  packet_processing.py  pcap_analyze.py  utils.py
server/tests/: test_pcap_analyze.py
website/: next.config.mjs  package-lock.json  package.json  tailwind.config.js
website/app/: client-layout.tsx  globals.css  layout.tsx  page.tsx
website/app/(analysis)/: layout.tsx
website/app/(analysis)/dashboard/: page.tsx
website/app/(analysis)/insights/: page.tsx
website/app/(analysis)/packets/: page.tsx
website/components/: theme-provider.tsx
website/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  breadcrumb.tsx  button.tsx  calendar.tsx  carousel.tsx  chart.tsx  command.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  menubar.tsx  navigation-menu.tsx  pagination.tsx  progress.tsx  scroll-area.tsx  select.tsx  sheet.tsx  sidebar.tsx  slider.tsx  sonner.tsx  table.tsx  toggle-group.tsx  toggle.tsx  use-toast.ts
website/hooks/: use-theme.ts
website/lib/: pdf-export.ts
website/src/lib/: chartUtils.ts  utils.ts
