[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "Khushraj Rathod",email = "khushraj.rathod@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyshark (>=0.6,<0.7)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
